--- a/core/package.json
+++ b/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@youjs/core",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/youjsdev/youjs.git"
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "test": "jest --config jestconfig.json --passWithNoTests",
     "prepublishOnly": "npm test && npm run lint",
