--- a/core/package.json
+++ b/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@youjs/core",
   "private": false,
-  "version": "1.1.1",
+  "version": "1.1.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/youjsdev/youjs.git"
@@ -23,7 +23,7 @@
   },
   "author": "Walter Shewmake",
   "files": [
-    "lib/**/*"
+    "dist/**/*"
   ],
   "license": "ISC",
   "devDependencies": {
