--- a/next/package.json
+++ b/next/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@youjs/core",
+  "name": "@youjs/next",
   "private": false,
-  "version": "1.1.3",
+  "version": "1.1.6",
   "repository": {
     "type": "git",
     "url": "https://github.com/youjsdev/youjs.git"
   },
-  "description": "You.js core module",
+  "description": "You.js Next.js module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -28,11 +28,23 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.4.0",
+    "@types/next": "^9.0.0",
     "jest": "^29.4.2",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@types/react": "^18.0.27",
+    "@youjs/core": "^1.1.3",
+    "@youjs/react": "^1.1.5",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "peerDependencies": {
+    "next": "^11.0.0"
   }
 }
