--- a/next/package.json
+++ b/next/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@youjs/next",
   "private": false,
-  "version": "1.4.3",
+  "version": "1.4.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/youjsdev/youjs.git"
@@ -38,13 +38,11 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@youjs/core": "^1.4.1",
-    "@youjs/react": "^1.4.2",
+    "@youjs/core": "^1.4.3",
+    "@youjs/react": "^1.4.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "peerDependencies": {
-    "next": "^11.0.0"
-  }
+  "peerDependencies": {}
 }
