--- a/next/package.json
+++ b/next/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@youjs/next",
   "private": false,
-  "version": "1.7.1",
+  "version": "1.7.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/youjsdev/youjs.git"
@@ -18,8 +18,7 @@
     "prepublishOnly": "npm test && npm run lint",
     "prepare": "npm run build",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "version": "npm run format && git add -A src"
   },
   "author": "Walter Shewmake",
   "files": [
